# HIREXSR_py

./: .gitignore  .pre-commit-config.yaml  CMOD_XICS_database.xlsx  HIREXSR.py  README.md  Run_Examples.ipynb  __init__.py  blessed_profiles.csv  get_Te_ne.py  hirexsr_blessed_profiles_lint_quality.json  hirexsr_blessed_profiles_profile_quality.json  hirexsr_data_quality.py  hirexsr_get_profile_py.py  hirexsr_lint_profile_py.py  hirexsr_load_result_py.py  hirexsr_plotting_py.py  hirexsr_profile_quality.json  hirexsr_vpol_existence.json  n_i_estimation.py  pyproject.toml  zeff_neo_python.py
tests/: test_data_connection.py  test_smoke_imports.py
