[project]
name = "hirexsr-py"
version = "0.1.0"
description = "Port of HIREXSR analysis THACO scripts, originally written in IDL"
authors = [{ name = "Rian Chandra" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipympl>=0.10.0",
    "matplotlib>=3.10.8",
    "mdsthin>=1.6.3",
    "numpy>=2.4.4",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "notebook>=7.5.5",
    "pytest>=8.3.0",
    "pre-commit (>=4.5.1,<5.0.0)",
]

[tool.uv.workspace]
members = [
    "hirexsr_py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
